--- a/index.html
+++ b/index.html
@@ -31,8 +31,53 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-      
+      <!-- Timeblocks go here from 9:00am - 5:00pm -->
+      <div class="row time-block" data-hour="9">
+        <div class="col-1 hour">9AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="10">
+        <div class="col-1 hour">10AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="11">
+        <div class="col-1 hour">11AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="12">
+        <div class="col-1 hour">12PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="13">
+        <div class="col-1 hour">1PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="14">
+        <div class="col-1 hour">2PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="15">
+        <div class="col-1 hour">3PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="16">
+        <div class="col-1 hour">4PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block" data-hour="17">
+        <div class="col-1 hour">5PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
